--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,15 @@
   <groupId>id.visionplus</groupId>
   <artifactId>sdk-test</artifactId>
   <version>0.1.0</version>
+
+ <repositories>
+      <repository>
+          <id>mvnrepository</id>
+          <url>https://mvnrepository.com/artifact/</url>
+      </repository>
+        <!-- Other repositories -->
+  </repositories>
+  
   <dependencies>
     <dependency>
       <groupId>androidx.core</groupId>
