--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
                     <groupId>androidx.compose.ui</groupId>
                     <artifactId>ui-unit</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>androidx.compose.ui</groupId>
+                    <artifactId>ui-geometry</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!-- Include other dependencies -->
