--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>androidx.compose.ui</groupId>
+        <artifactId>ui-text</artifactId>
+        <version>1.4.0</version> <!-- Adjust the version to resolve conflicts -->
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
         <groupId>androidx.compose</groupId>
         <artifactId>compose-bom</artifactId>
         <version>2023.03.00</version>
@@ -55,6 +61,12 @@
       <artifactId>activity-compose</artifactId>
       <version>1.7.2</version>
       <scope>runtime</scope>
+        <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-text</artifactId>
+            </exclusion>
+        </exclusions>
     </dependency>
     <dependency>
       <groupId>androidx.navigation</groupId>
@@ -81,6 +93,12 @@
       <groupId>androidx.compose.material3</groupId>
       <artifactId>material3</artifactId>
       <scope>runtime</scope>
+        <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-text</artifactId>
+            </exclusion>
+        </exclusions>
     </dependency>
   </dependencies>
 </project>
