--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
   <packaging>pom</packaging>
   <dependencyManagement>
     <dependencies>
+        <dependency>
+            <groupId>androidx.compose.ui</groupId>
+            <artifactId>ui-graphics</artifactId>
+            <version>1.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
       <dependency>
         <groupId>androidx.compose.ui</groupId>
         <artifactId>ui-text</artifactId>
@@ -64,6 +70,10 @@
         <exclusions>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-graphics</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-text</artifactId>
             </exclusion>
         </exclusions>
@@ -94,6 +104,10 @@
       <artifactId>material3</artifactId>
       <scope>runtime</scope>
         <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-graphics</artifactId>
+            </exclusion>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-text</artifactId>
