--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
         <dependency>
             <groupId>androidx.compose.ui</groupId>
+            <artifactId>ui-unit</artifactId>
+            <version>1.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>androidx.compose.ui</groupId>
             <artifactId>ui-graphics</artifactId>
             <version>1.4.0</version>
             <scope>runtime</scope>
@@ -70,6 +76,10 @@
         <exclusions>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-unit</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-graphics</artifactId>
             </exclusion>
             <exclusion>
@@ -83,6 +93,12 @@
       <artifactId>navigation-compose</artifactId>
       <version>2.6.0</version>
       <scope>runtime</scope>
+        <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-unit</artifactId>
+            </exclusion>
+        </exclusions>
     </dependency>
     <dependency>
       <groupId>androidx.compose.ui</groupId>
