--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
         <dependency>
             <groupId>androidx.compose.ui</groupId>
+            <artifactId>ui-geometry</artifactId>
+            <version>1.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>androidx.compose.ui</groupId>
             <artifactId>ui-unit</artifactId>
             <version>1.4.0</version>
             <scope>runtime</scope>
@@ -76,6 +82,10 @@
         <exclusions>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-geometry</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-unit</artifactId>
             </exclusion>
             <exclusion>
@@ -94,6 +104,10 @@
       <version>2.6.0</version>
       <scope>runtime</scope>
         <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-geometry</artifactId>
+            </exclusion>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-unit</artifactId>
