--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
         <dependency>
             <groupId>androidx.compose.ui</groupId>
+            <artifactId>ui-util</artifactId>
+            <version>1.4.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>androidx.compose.ui</groupId>
             <artifactId>ui-geometry</artifactId>
             <version>1.4.0</version>
             <scope>runtime</scope>
@@ -82,6 +88,10 @@
         <exclusions>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-util</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-geometry</artifactId>
             </exclusion>
             <exclusion>
@@ -104,6 +114,10 @@
       <version>2.6.0</version>
       <scope>runtime</scope>
         <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-util</artifactId>
+            </exclusion>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-geometry</artifactId>
@@ -134,6 +148,10 @@
       <artifactId>material3</artifactId>
       <scope>runtime</scope>
         <exclusions>
+            <exclusion>
+                <groupId>androidx.compose.ui</groupId>
+                <artifactId>ui-util</artifactId>
+            </exclusion>
             <exclusion>
                 <groupId>androidx.compose.ui</groupId>
                 <artifactId>ui-graphics</artifactId>
