--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
   <dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>androidx.activity</groupId>
+            <artifactId>activity-ktx</artifactId>
+            <version>1.7.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>androidx.navigation</groupId>
+            <artifactId>navigation-runtime-ktx</artifactId>
+            <version>2.6.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>androidx.compose.ui</groupId>
             <artifactId>ui-util</artifactId>
             <version>1.4.0</version>
